# vm-interpreter

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  encode.py  test_arith.txt  test_branch.txt  test_cmp_flags.txt  test_stack_extra.txt
docs/: architecture.md
include/: Instruction.h  InstructionFactory.h  InstructionParser.h  VMContext.h  opcodes.h  registers.h  runner.h
src/: InstructionFactory.cpp  InstructionParser.cpp  Instructions.cpp  Instructions.h  VMContext.cpp  main.cpp  runner.cpp
tests/: README.md
